add support for scheduling notifications
